--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 
 SECRET_KEY = django-insecure-f$09c8&qv$tc19$vf6x%g3#ketp5c0pk9#5qq3x+@uw-cijp+^
 FIREBASE_CREDENTIALS_JSON= agriplan-a2bb2-firebase-adminsdk-fbsvc-c9263de436.json
-DATABASE_URL= postgresql://agriplan_sql_user:y4qeY5zA7phEeo7cHIrPew0VBCLqZ2HR@dpg-d2ie8hmmcj7s738di1mg-a.frankfurt-postgres.render.com/agriplan_sql
-
+DATABASE_URL= postgresql://agriplan_sql_gi5e_user:5fsDBZW4FLM5nB3bwKk5DRKYxSysgx5R@dpg-d2k50f7diees73dae24g-a.oregon-postgres.render.com/agriplan_sql_gi5e
 
 
 
